--- a/partials/header.html
+++ b/partials/header.html
@@ -10,8 +10,6 @@
     <nav>
       <a href="/index.html" data-i18n="nav_home">الرئيسية</a>
       <a href="/courses.html" data-i18n="nav_courses">الدورات</a>
-      <a href="/tests.html" data-i18n="nav_tests">الاختبارات</a>
-      <a href="/achievements.html" data-i18n="nav_achievements">إنجازاتي</a>
       <a href="/paths.html" data-i18n="nav_paths">المسارات</a>
     </nav>
 
@@ -24,6 +22,7 @@
     <!-- Header Actions -->
     <div class="header-actions">
       <button id="langBtn" data-i18n="lang"><i class="fa fa-globe"></i> عربي</button>
+      <button id="themeToggle"><i class="fa fa-moon"></i> مظهر</button>
       <div class="notification-wrapper">
         <button id="notifBtn" aria-label="الإشعارات"><i class="fa fa-bell"></i>
           <span class="notification-badge" id="notifBadge">0</span>
