Add bilingual UI support across pages

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,28 +3,28 @@
 
     <div class="footer-col">
       <h4>CourseHub</h4>
-      <p>
+      <p data-i18n-en="Your learning platform to gain the latest skills and accredited certificates.">
         منصتك التعليمية لتعلّم أحدث المهارات والحصول على شهادات معتمدة.
       </p>
     </div>
 
     <div class="footer-col">
-      <h4>روابط سريعة</h4>
-      <a href="/index.html">الرئيسية</a>
-      <a href="/courses.html">الدورات</a>
-      <a href="/tests.html">الاختبارات</a>
-      <a href="/contact.html">تواصل معنا</a>
+      <h4 data-i18n-en="Quick Links">روابط سريعة</h4>
+      <a href="/index.html" data-i18n-en="Home">الرئيسية</a>
+      <a href="/courses.html" data-i18n-en="Courses">الدورات</a>
+      <a href="/tests.html" data-i18n-en="Tests">الاختبارات</a>
+      <a href="/contact.html" data-i18n-en="Contact us">تواصل معنا</a>
     </div>
 
     <div class="footer-col">
-      <h4>الحساب</h4>
-      <a href="/login.html">تسجيل الدخول</a>
-      <a href="/register.html">إنشاء حساب</a>
-      <a href="/my-courses.html">دوراتي</a>
+      <h4 data-i18n-en="Account">الحساب</h4>
+      <a href="/login.html" data-i18n-en="Log in">تسجيل الدخول</a>
+      <a href="/register.html" data-i18n-en="Create account">إنشاء حساب</a>
+      <a href="/my-courses.html" data-i18n-en="My courses">دوراتي</a>
     </div>
 
     <div class="footer-col">
-      <h4>تابعنا</h4>
+      <h4 data-i18n-en="Follow us">تابعنا</h4>
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -39,7 +39,7 @@
   </div>
 
   <div class="footer-bottom">
-    © <span id="year"></span> CourseHub - جميع الحقوق محفوظة
+    © <span id="year"></span> CourseHub - <span data-i18n-en="All rights reserved">جميع الحقوق محفوظة</span>
   </div>
 
 
